docker-registry/resources/svc-registry.yaml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
